--- a/styles.css
+++ b/styles.css
@@ -710,7 +710,7 @@ textarea.vtasks-edge-label-input {
 
 .vtasks-sidebar-item {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 0.5em;
 }
 
